@@ -1,5 +1,13 @@
 2011-10-25  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
+	PR libstdc++/50862
+	* include/std/condition_variable (condition_variable_any::wait): Fix
+	deadlock and ensure _Lock::lock() is called on exit.
+	(condition_variable_any::native_handle): Remove, as per LWG 1500.
+	* testsuite/30_threads/condition_variable_any/50862.cc: New.
+
+2011-10-25  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
 	PR libstdc++/49894
 	* include/std/mutex (__mutex_base,__recursive_mutex_base): Define new
 	base classes to manage construction/destruction of native mutexes,
